--- a/RedFrontier.cfg
+++ b/RedFrontier.cfg
@@ -1,4 +1,16 @@
 // Contract Pack configuration file
+CONTRACT_GROUP
+{
+    name = RedFrontier
+    displayName = Red Frontier Campaign
+    minVersion = 1.30.0
+    
+    // Group details
+    agent = Lowne Aerospace
+    maxSimultaneous = 1
+}
+
+// Main campaign information contract
 CONTRACT_TYPE
 {
     name = RedFrontierConfiguration
@@ -19,7 +31,7 @@ CONTRACT_TYPE
     agent = Lowne Aerospace
     
     // Contract group
-    group = Red Frontier
+    group = RedFrontier
     
     // Minimum offered
     minExpiry = 0
@@ -29,15 +41,17 @@ CONTRACT_TYPE
     autoAccept = false
     weight = 1000
     
-    // Start contract when game starts
-    DATA
-    {
-        type = List<string>
-        requiredValue = false
-    }
-    
     // Basic rewards - adjust as needed
     advanceFunds = 10000
     rewardFunds = 25000
     rewardReputation = 10
+    
+    // Need at least one parameter
+    PARAMETER
+    {
+        name = CompleteContract
+        type = CompleteContract
+        contractType = RF1_1_ABlipInTheDark
+        hideChildren = true
+    }
 }
