--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -10,8 +10,7 @@ CONTRACT_TYPE
     
     // Contract should be invisible to the player
     agent = Lowne Aerospace
-    group = Red Frontier
-    hidden = true
+    group = RedFrontier
     
     // Contract parameters
     cancellable = false
@@ -25,16 +24,23 @@ CONTRACT_TYPE
         rf1_1_completed = false
     }
     
+    // Need at least one parameter
+    PARAMETER
+    {
+        name = Placeholder
+        type = All
+        hideChildren = true
+        completeInSequence = true
+    }
+    
     // Set variables when RF1.1 is completed
     BEHAVIOUR
     {
-        name = Expression
-        type = Expression
+        name = CaptureContractComplete
+        type = CaptureContractComplete
         
-        CONTRACT_COMPLETED
-        {
-            parameter = RF1_1_ABlipInTheDark
-            expression = @/rf1_1_completed = true
-        }
+        contractType = RF1_1_ABlipInTheDark
+        
+        onCapture = @/rf1_1_completed = true
     }
 }
