--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -36,11 +36,11 @@ CONTRACT_TYPE
     // Set variables when RF1.1 is completed
     BEHAVIOUR
     {
-        name = CaptureContractComplete
-        type = CaptureContractComplete
+        name = CaptureContract
+        type = CaptureContract
         
         contractType = RF1_1_ABlipInTheDark
         
-        onCapture = @/rf1_1_completed = true
+        onComplete = @/rf1_1_completed = true
     }
 }
