--- a/RedFrontier.cfg
+++ b/RedFrontier.cfg
@@ -7,7 +7,7 @@ CONTRACT_GROUP
     
     // Group details
     agent = Lowne Aerospace
-    maxSimultaneous = 1
+    maxSimultaneous = 2
 }
 
 // Main campaign information contract
@@ -28,7 +28,7 @@ CONTRACT_TYPE
     completedMessage = Campaign initiated. Welcome to Operation Red Frontier.
     
     // Agent to use for contracts
-    agent = Lowne Aerospace
+    agent = KSC Science Directorate
     
     // Contract group
     group = RedFrontier
@@ -37,8 +37,8 @@ CONTRACT_TYPE
     minExpiry = 0
     maxExpiry = 0
     maxCompletions = 1
-    maxSimultaneous = 1
-    autoAccept = false
+    maxSimultaneous = 2
+    autoAccept = True
     
     // Basic rewards - adjust as needed
     advanceFunds = 10000
@@ -47,10 +47,20 @@ CONTRACT_TYPE
     
     // Need at least one parameter
     PARAMETER
-    {
-        name = CompleteContract
-        type = CompleteContract
-        contractType = RF1_1_ABlipInTheDark
-        hideChildren = true
-    }
+        {
+            name = RFRequirement
+            type = All
+            title = Complete Mission Progress
+            hideChildren = true
+            completeInSequence = true
+            optional = false
+
+	  REQUIREMENT
+	  {
+	     name = CompleteContract
+	     type = CompleteContract
+	     contractType = RF1_1_ABlipInTheDark
+	   }
+        }
+
 }
