--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -5,8 +5,8 @@ CONTRACT_TYPE
     title = Red Frontier Campaign Progression
     
     // Hidden contract to manage progression
-    description = This contract handles progression between Red Frontier missions.
-    synopsis = Internal mission handling.
+    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. Access to mission briefings and operation status reports requires appropriate security clearance.
+    synopsis = Current Operation: Red Frontier - Establishing presence in the Duna system.
     
     // Contract should be invisible to the player
     agent = Lowne Aerospace
@@ -14,33 +14,110 @@ CONTRACT_TYPE
     
     // Contract parameters
     cancellable = false
-    declinable = false
-    autoAccept = true
+    declinable = true
+    autoAccept = false
+    completedMessage = Mission progression updated.
+    prestige = Trivial
+    maxCompletions = 1
+    maxSimultaneous = 1
     
     // Track completion of RF1.1
     DATA
     {
         type = bool
         rf1_1_completed = false
+	persist = true
     }
     
-    // Need at least one parameter
-    PARAMETER
+    DATA
     {
-        name = Placeholder
-        type = All
-        hideChildren = true
-        completeInSequence = true
+        type = bool
+        rf1_2_completed = false
+	persist = true
+    }
+
+    DATA
+    {
+        type = string
+        current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - AWAITING INITIAL DEPLOYMENT"
+	persist = true
+    }
+    
+    DATA
+    {
+        type = string
+        status_message = "The Science Council has approved funding for an expanded exploratory mission to the Duna system. As our primary contractor for deep space operations, Lowne Aerospace has been selected to establish the initial infrastructure required for comprehensive study of our neighboring planet.
+Recent observations from our long-range telescopes have detected unusual spectral anomalies in Duna's surface composition that warrant detailed investigation. These findings suggest potential resource concentrations that could significantly advance our understanding of planetary formation and potentially support future exploration efforts.
+To properly investigate these anomalies, we require a network of specialized orbital and surface assets to be deployed during the upcoming transfer window. This mission, designated RF1.1, will establish the foundation for all future Duna system operations.
+"
+	persist = true
+    }
+
+ 
+   PARAMETER
+        {
+            name = PhaseDisplay
+            type = All
+            title = @/current_phase
+            completeInSequence = true
+            optional = true
+        }
+        
+
+        PARAMETER
+        {
+            name = StatusDisplay
+            type = All
+            title = @/status_message
+            completeInSequence = true
+            optional = true
+        }
+        
+        PARAMETER
+        {
+            name = RF11Requirement
+            type = All
+            title = Complete RF1.1: "A Blip in the Dark"
+            hideChildren = true
+            completeInSequence = true
+            optional = false
+
+	  REQUIREMENT
+	  {
+	     name = CompleteContract
+	     type = CompleteContract
+	     contractType = RF1_1_ABlipInTheDark
+	   }
+        }
     }
     
     // Set variables when RF1.1 is completed
     BEHAVIOUR
     {
-        name = CaptureContract
-        type = CaptureContract
+        name = Expression
+        type = Expression
         
-        contractType = RF1_1_ABlipInTheDark
+        CONTRACT_COMPLETED_SUCCESS
+        {
+            contractType = RF1_1_ABlipInTheDark
+            rf1_1_completed = true
+	    @/status_message = "Initial infrastructure deployment successful. Anomalous signal patterns confirmed across multiple regions of Duna. Science Council has authorized a follow-up mission to collect physical samples."
+            @/current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - SIGNAL CONFIRMATION REQUIRED"
+        }
+    }
+    
+    // Set variables when RF1.2 is completed
+    BEHAVIOUR
+    {
+        name = Expression
+        type = Expression
         
-        onComplete = @/rf1_1_completed = true
+        CONTRACT_COMPLETED_SUCCESS
+        {
+            contractType = RF1_2_SignalConfirmed
+            rf1_2_completed = true
+ 	    @/status_message = "Sample collection and analysis complete. Unique material properties discovered warrant establishing a permanent research presence. Preparations for a dedicated research outpost are underway."
+            @/current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - RESEARCH OUTPOST REQUIRED"
+        }
     }
 }
