--- a/Contracts/RF1_1_ABlipInTheDark.cfg
+++ b/Contracts/RF1_1_ABlipInTheDark.cfg
@@ -14,23 +14,40 @@ CONTRACT_TYPE
     group = RedFrontier
     
     // Contract requirements
-    minExpiry = 0
-    maxExpiry = 0
-    deadline = 0
+    minExpiry = 10000
+    maxExpiry = 10000
+    deadline = 2000
     cancellable = true
     declinable = true
     autoAccept = false
     prestige = Significant
-    
+
+	REQUIREMENT
+	{
+ 	   name = AcceptContract
+ 	   type = AcceptContract
+ 	   contractType = RF_MissionProgression
+	}    
+
     // Rewards - these can be adjusted based on your preference
-    advanceFunds = 100000.0
-    rewardFunds = 300000.0
-    rewardScience = 300.0
-    rewardReputation = 50.0
+    advanceFunds = 300000.0
+    rewardFunds = 600000.0
+    rewardScience = 500.0
+    rewardReputation = 70.0
     
     // Target Body
     targetBody = Duna
     
+ DATA
+    {
+        type = string
+        Orbital_Station = "Design and launch an orbital research platform for Duna system, and equip it with comprehensive sensor package for surface analysis. Implement science data processing labratory. Establish the station in stable orbit optimized for surface coverage.
+Include docking capabilities for future expansion.
+"
+	persist = true
+    }
+
+
     // Objectives
     PARAMETER
     {
@@ -40,6 +57,15 @@ CONTRACT_TYPE
         
         define = Duna Science Station
         
+        PARAMETER
+        {
+            name = Orbital_Station
+            type = All
+            title = @/Orbital_Station
+            completeInSequence = true
+            optional = true
+        }
+
         PARAMETER
         {
             name = OrbitDuna
@@ -107,7 +133,8 @@ CONTRACT_TYPE
                 name = OrbitDuna
                 type = Orbit
                 targetBody = Duna
-                minCount = 3
+                minAltitude = 100000
+                maxAltitude = 250000
             }
         }
     }
@@ -122,11 +149,10 @@ CONTRACT_TYPE
         
         PARAMETER
         {
-            name = LandOnDuna
-            type = LandAtSpecificBody
+            name = ReachState
+            type = ReachState
             targetBody = Duna
-            minCount = 4
-            completeInSequence = false
+            situation = LANDED
         }
         
         PARAMETER
@@ -164,9 +190,10 @@ CONTRACT_TYPE
         
         PARAMETER
         {
-            name = LandOnIke
-            type = LandAtSpecificBody
+            name = ReachState
+            type = ReachState
             targetBody = Ike
+	    situation = LANDED
         }
         
         PARAMETER
@@ -187,10 +214,15 @@ CONTRACT_TYPE
         
         PARAMETER
         {
-            name = HasStorage
-            type = PartValidation
-            partModule = ModuleResourcesTank
-            minCount = 1
+            name = HasResourceCapacity
+            type = HasResourceCapacity
+          RESOURCE
+    	   {
+       		 resource = Ore
+      		  minQuantity = 10.0
+      		  maxQuantity = 1000.0
+    
+            }
         }
-    }
+     }
 }
