--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -2,7 +2,7 @@
 CONTRACT_TYPE
 {
     name = RF_MissionProgression
-    title = Red Frontier Campaign Progression
+    title = Red Frontier: Mission Briefing
     
     // Hidden contract to manage progression
     description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. Access to mission briefings and operation status reports requires appropriate security clearance.
