--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -2,11 +2,13 @@
 CONTRACT_TYPE
 {
     name = RF_MissionProgression
-    title = Red Frontier: Mission Briefing
+    title = Red Frontier Campaign
     
-    // Hidden contract to manage progression
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. Access to mission briefings and operation status reports requires appropriate security clearance.
+    // Automatic contract to manage progression
+   description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. \n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Duna System Investigation Initiative\n\n
+
     synopsis = Current Operation: Red Frontier - Establishing presence in the Duna system.
+
     
     // Contract should be invisible to the player
     agent = Lowne Aerospace
@@ -15,25 +17,46 @@ CONTRACT_TYPE
     // Contract parameters
     cancellable = false
     declinable = true
-    autoAccept = false
+    autoAccept = true
     completedMessage = Mission progression updated.
-    prestige = Trivial
+    prestige = Exceptional
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Track completion of RF1.1
+    // Track completion of missions
     DATA
     {
         type = bool
         rf1_1_completed = false
-	persist = true
+        persist = true
     }
     
     DATA
     {
         type = bool
         rf1_2_completed = false
-	persist = true
+        persist = true
+    }
+    
+    DATA
+    {
+        type = bool
+        rf1_3_completed = false
+        persist = true
+    }
+    
+    DATA
+    {
+        type = bool
+        rf1_4_completed = false
+        persist = true
+    }
+    
+    DATA
+    {
+        type = bool
+        phase1_completed = false
+        persist = true
     }
 
     DATA
@@ -46,9 +69,9 @@ CONTRACT_TYPE
     DATA
     {
         type = string
-        status_message = "The Science Council has approved funding for an expanded exploratory mission to the Duna system. As our primary contractor for deep space operations, Lowne Aerospace has been selected to establish the initial infrastructure required for comprehensive study of our neighboring planet.
-Recent observations from our long-range telescopes have detected unusual spectral anomalies in Duna's surface composition that warrant detailed investigation. These findings suggest potential resource concentrations that could significantly advance our understanding of planetary formation and potentially support future exploration efforts.
-To properly investigate these anomalies, we require a network of specialized orbital and surface assets to be deployed during the upcoming transfer window. This mission, designated RF1.1, will establish the foundation for all future Duna system operations.
+        status_message = "The Science Council has approved funding for an expanded exploratory mission to the Duna system. As our primary contractor for deep space operations, Lowne Aerospace has been selected to establish the initial infrastructure required for comprehensive study of our neighboring planet\n\nAnalysis of mission parameters has identified the following technical requirements:\n\nOrbital Science Station Deployment to serve as the hub for future research operations and potentially as a waypoint for crewed missions\n\nCommunications Infrastructure will support all future missions to the Duna system, eliminating the need for individual missions to deploy dedicated communications assets.\n\nSurface Probe data will inform landing site selection for future, more complex missions including potential sample return operations.\n\nInitial resource utilization assessment on Ike will demonstrate the feasibility of in-situ resource utilization, potentially transforming our approach to interplanetary mission logistics.\n\nThis mission represents not merely a scientific endeavor but the first step toward establishing a permanent kerbal presence in the Duna system.
+ 
+
 "
 	persist = true
     }
@@ -101,7 +124,7 @@ To properly investigate these anomalies, we require a network of specialized orb
         {
             contractType = RF1_1_ABlipInTheDark
             rf1_1_completed = true
-	    @/status_message = "Initial infrastructure deployment successful. Anomalous signal patterns confirmed across multiple regions of Duna. Science Council has authorized a follow-up mission to collect physical samples."
+	    @/status_message = "The probe network deployed during RF1.1 has successfully detected and mapped anomalous signal patterns across multiple regions of Duna. The Science Council has reviewed the preliminary data and determined that physical sample collection is necessary to verify our initial findings.\n\nOrbital scans have identified five distinct regions where the anomalous signature appears strongest, with the most promising readings emanating from the northern hemisphere's Midland Sea region. Remote analysis suggests that the material of interest exists approximately 35-50 meters below the surface, with trace evidence appearing in surface regolith.\n\nThis mission will focus on retrieving physical samples from high-concentration sites and conducting preliminary analysis to determine the composition and properties of this unknown material. The results will directly inform our future operations in the Duna system.\n\nDeploy a drilling rover to Duna, collect samples, and return them to orbit.\n\nAnalysis of mission parameters has identified the following technical requirements:\n\nSpecialized Drilling Capabilities\nStandard surface sampling equipment is insufficient to extract material from the necessary depths, requiring specialized drilling capabilities.\n\nSample Return Logistics\nSample return from the Duna surface presents significant delta-V challenges, necessitating efficient vehicle design and potential local fuel production.\n\nOn-site Analysis\nOn-site analysis capabilities will be required to determine which samples warrant return to orbit.\n\nEnhanced Resource Utilization\nThe expanded operations in the Duna system require enhanced resource utilization on Ike to support the growing fleet."
             @/current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - SIGNAL CONFIRMATION REQUIRED"
         }
     }
@@ -116,8 +139,40 @@ To properly investigate these anomalies, we require a network of specialized orb
         {
             contractType = RF1_2_SignalConfirmed
             rf1_2_completed = true
- 	    @/status_message = "Sample collection and analysis complete. Unique material properties discovered warrant establishing a permanent research presence. Preparations for a dedicated research outpost are underway."
+            @/status_message = "The successful collection and analysis of Duna surface samples during RF1.2 has yielded results that warrant immediate allocation of dedicated research resources. The anomalous material properties demonstrate unique characteristics that could revolutionize our approach to interplanetary propulsion and power generation.\n\nThe Science Council has authorized RF1.3: \"Research Outpost,\" the next phase of Operation Red Frontier. This mission will focus on establishing a permanent, crewed research facility on Ike to support ongoing analysis and experimentation. Ike's low gravity environment and proximity to Duna make it an ideal location for a permanent base, offering significant advantages in terms of landing/ascent delta-V requirements while providing convenient access to Duna for future operations.\n\nAnalysis of long-term research requirements has identified the following technical needs:\n\nPermanent Habitat Establishment\nCurrent temporary facilities on Ike lack the laboratory space and power generation capabilities necessary for advanced research operations.\n\nEnhanced Resource Processing\nSustainable operations demand expanded resource processing capabilities to reduce dependency on supply missions from Kerbin.\n\nPower Infrastructure Development\nLong-term scientific operations require stable power generation in varying conditions, including Duna eclipses.\n\nSurface Mobility Enhancement\nExtended crew deployments require dedicated habitation facilities beyond the limited accommodations currently available."
             @/current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - RESEARCH OUTPOST REQUIRED"
         }
     }
+
+    // Set variables when RF1.3 is completed
+    BEHAVIOUR
+    {
+        name = Expression
+        type = Expression
+        
+        CONTRACT_COMPLETED_SUCCESS
+        {
+            contractType = RF1_3_ResearchOutpost
+            rf1_3_completed = true
+            @/status_message = "With the successful establishment of the Ike Research Outpost during RF1.3, the Science Council has determined that the time is right to expand our presence to Duna's surface. The research conducted on Ike has provided crucial insights into the unique properties of Duna's composition, warranting direct on-site investigation that cannot be adequately conducted through remote operations alone.\n\nAdditionally, the expanding scope of our operations in the Duna system has highlighted the need for a more efficient logistics framework between Kerbin and Duna. The current approach of individual mission launches is becoming increasingly inefficient as our presence grows.\n\nThe Science Council has authorized RF1.4: \"Duna Foothold,\" which will establish our first permanent presence on Duna's surface while simultaneously creating the Kerbin Gateway Station to serve as a logistics hub for all future interplanetary traffic.\n\nThis dual-focus mission represents a pivotal moment in our exploration efforts, transforming our approach from individual missions to sustained presence with permanent infrastructure spanning two planetary systems."
+            @/current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - DUNA FOOTHOLD REQUIRED"
+        }
+    }
+    
+    // Set variables when RF1.4 is completed
+    BEHAVIOUR
+    {
+        name = Expression
+        type = Expression
+        
+        CONTRACT_COMPLETED_SUCCESS
+        {
+            contractType = RF1_4_DunaFoothold
+            rf1_4_completed = true
+            phase1_completed = true
+            @/status_message = "PHASE 1 COMPLETE: Congratulations on completing Phase 1 of Operation Red Frontier! With permanent facilities now established on both Ike and Duna, and the Kerbin Gateway Station operational, we have successfully created the foundation for sustained presence in the Duna system.\n\nThe Science Council has authorized progression to Phase 2 operations, which will focus on expanding our capabilities and establishing permanent command infrastructure. Near Future Electrical technologies have been unlocked for all future missions.\n\nStand by for Phase 2 briefing: Duna Orbital Command."
+            @/current_phase = "PHASE 1: DUNA SYSTEM ESTABLISHMENT - COMPLETE | PHASE 2: SYSTEM EXPANSION - PENDING"
+        }
+    }
+}
 }
