--- a/Contracts/RF1_1_ABlipInTheDark.cfg
+++ b/Contracts/RF1_1_ABlipInTheDark.cfg
@@ -3,12 +3,20 @@ CONTRACT_TYPE
     name = RF1_1_ABlipInTheDark
     title = RF1.1: "A Blip in the Dark"
     
-    description = Recent observations from our long-range telescopes have detected unusual spectral anomalies in Duna's surface composition that warrant detailed investigation. As our primary contractor for deep space operations, Lowne Aerospace has been selected to establish the initial infrastructure required for comprehensive study of our neighboring planet. Your mission is to deploy a science station in Duna orbit, establish a communications network, and land science probes on the surface.
+    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. \n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Duna System Investigation Initiative\n\nThe Science Council has approved funding for an expanded exploratory mission to the Duna system. As our primary contractor for deep space operations, Lowne Aerospace has been selected to establish the initial infrastructure required for comprehensive study of our neighboring planet\n\nRecent observations from our long-range telescopes have detected unusual spectral anomalies in Duna's surface composition that warrant detailed investigation. These findings suggest potential resource concentrations that could significantly advance our understanding of planetary formation and potentially support future exploration efforts.\n\nTo properly investigate these anomalies, we require a network of specialized orbital and surface assets to be deployed during the upcoming transfer window. This mission, designated RF1.1, will establish the foundation for all future Duna system operations.
+
+notes = Analysis of mission parameters has identified the following technical requirements:\n\nOrbital Science Station Deployment\nThe first priority upon reaching the Duna system is establishing the orbital science station and primary communications relay. These assets will provide the foundation for subsequent mission phases and ensure continuous contact with KSC.\n\nCommunications Infrastructure Implementation\nWith primary communications established, additional relay satellites will be positioned to create comprehensive coverage of the Duna system, including high-inclination orbits to cover polar regions.\n\nSurface Probe Deployment\nSurface probes will be deployed to regions of interest identified through initial orbital scanning, with landing sites selected to maximize scientific return while ensuring communication coverage.\n\nInitial Resource Utilization Assessment\nThe final phase will focus on establishing mining operations on Ike, leveraging its low gravity for easier landing and ascent operations while providing a testbed for resource extraction technologies.
+
+    DATA
+    {
+        type = string
+        mission_objectives = "Your mission is to deploy a science station in Duna orbit, establish a communications network, and land science probes on the surface."
+    }
     
-    synopsis = Establish orbital science station, communications network, and surface probes at Duna.
+    synopsis = This mission represents not merely a scientific endeavor but the first step toward establishing a permanent kerbal presence in the Duna system.
     
     completedMessage = Excellent work! The probe network has successfully detected and mapped anomalous signal patterns across multiple regions of Duna. The Science Council will review this data and determine next steps.
-    
+
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
@@ -38,16 +46,7 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Duna
     
- DATA
-    {
-        type = string
-        Orbital_Station = "Design and launch an orbital research platform for Duna system, and equip it with comprehensive sensor package for surface analysis. Implement science data processing labratory. Establish the station in stable orbit optimized for surface coverage.
-Include docking capabilities for future expansion.
-"
-	persist = true
-    }
-
-
+ 
     // Objectives
     PARAMETER
     {
@@ -57,14 +56,6 @@ Include docking capabilities for future expansion.
         
         define = Duna Science Station
         
-        PARAMETER
-        {
-            name = Orbital_Station
-            type = All
-            title = @/Orbital_Station
-            completeInSequence = true
-            optional = true
-        }
 
         PARAMETER
         {
@@ -187,7 +178,8 @@ Include docking capabilities for future expansion.
         title = Establish Ike Mining Outpost
         
         define = Ike Mining Outpost
-        
+        notes = Analysis of mission parameters has identified the following technical requirements:
+
         PARAMETER
         {
             name = ReachState
@@ -225,4 +217,27 @@ Include docking capabilities for future expansion.
             }
         }
      }
+	BEHAVIOUR
+	{
+	    name = Expression
+	    type = Expression
+	    
+	PARAMETER_COMPLETED
+	  {
+	    parameter = MissionBriefPart1
+	    complete = true
+	   }
+	}
+	
+	BEHAVIOUR
+	{
+	    name = Expression
+	    type = Expression
+	
+	PARAMETER_COMPLETED
+	  {
+	    parameter = MissionBriefPart2
+	    complete = true
+	   }
+	}
 }
