--- a/Contracts/RF1_2_SignalConfirmed.cfg
+++ b/Contracts/RF1_2_SignalConfirmed.cfg
@@ -3,7 +3,9 @@ CONTRACT_TYPE
     name = RF1_2_SignalConfirmed
     title = RF1.2: "Signal Confirmed"
     
-    description = The probe network deployed during RF1.1 has successfully detected and mapped anomalous signal patterns across multiple regions of Duna. The Science Council has reviewed the preliminary data and determined that physical sample collection is necessary to verify our initial findings. Your mission is to design and deploy a specialized drilling rover to Duna, collect samples, and return them to your orbital science station.
+    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. \n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Surface Sample Collection Initiative\n\nThe probe network deployed during RF1.1 has successfully detected and mapped anomalous signal patterns across multiple regions of Duna. The Science Council has reviewed the preliminary data and determined that physical sample collection is necessary to verify our initial findings.\n\nOrbital scans have identified five distinct regions where the anomalous signature appears strongest, with the most promising readings emanating from the northern hemisphere's Midland Sea region. Remote analysis suggests that the material of interest exists approximately 35-50 meters below the surface, with trace evidence appearing in surface regolith.\n\nThis mission will focus on retrieving physical samples from high-concentration sites and conducting preliminary analysis to determine the composition and properties of this unknown material. The results will directly inform our future operations in the Duna system.
+    
+    notes = Analysis of mission parameters has identified the following technical requirements:\n\nSpecialized Drilling Capabilities\nStandard surface sampling equipment is insufficient to extract material from the necessary depths, requiring specialized drilling capabilities.\n\nSample Return Logistics\nSample return from the Duna surface presents significant delta-V challenges, necessitating efficient vehicle design and potential local fuel production.\n\nOn-site Analysis\nOn-site analysis capabilities will be required to determine which samples warrant return to orbit.\n\nEnhanced Resource Utilization\nThe expanded operations in the Duna system require enhanced resource utilization on Ike to support the growing fleet.
     
     synopsis = Deploy a drilling rover to Duna, collect samples, and return them to orbit.
     
@@ -31,8 +33,8 @@ CONTRACT_TYPE
     }
     
     // Rewards
-    advanceFunds = 150000.0
-    rewardFunds = 400000.0
+    advanceFunds = 100000.0
+    rewardFunds = 200000.0
     rewardScience = 400.0
     rewardReputation = 75.0
     
@@ -45,6 +47,7 @@ CONTRACT_TYPE
         name = DrillRoverGroup
         type = VesselParameterGroup
         title = Deploy Drilling Rover to Duna
+        notes = Design and deploy specialized unmanned drilling rover to Duna with deep-drilling capabilities (minimum 35m capacity). Include scientific instruments for preliminary sample analysis and secure sample containment systems.
         
         define = Duna Drilling Rover
         
@@ -53,7 +56,7 @@ CONTRACT_TYPE
             name = ReachState
             type = ReachState
             targetBody = Duna
-	    situation = LANDED
+            situation = LANDED
         }
         
         PARAMETER
@@ -86,6 +89,7 @@ CONTRACT_TYPE
         name = SampleReturnGroup
         type = VesselParameterGroup
         title = Return Sample to Orbit
+        notes = Create a sample return capability to deliver collected materials to the orbital science station. Implement secure containment systems and establish docking capability with the existing station.
         
         define = Duna Sample Return Vehicle
         
@@ -120,6 +124,7 @@ CONTRACT_TYPE
         name = ExpandIkeMiningGroup
         type = VesselParameterGroup
         title = Expand Ike Mining Operations
+        notes = Expand Ike mining operations with additional extraction units. Implement advanced ore processing systems and establish fuel production capabilities sufficient for return missions.
         
         define = Ike Mining Expansion
         
@@ -128,7 +133,7 @@ CONTRACT_TYPE
             name = ReachState
             type = ReachState
             targetBody = Ike
-	    situation = LANDED
+            situation = LANDED
         }
         
         PARAMETER
