--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -1,3 +1,4 @@
+
 // This will handle progression between missions
 CONTRACT_TYPE
 {
@@ -5,7 +6,7 @@ CONTRACT_TYPE
     title = Red Frontier Campaign
     
     // Automatic contract to manage progression
-   description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. \n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Duna System Investigation Initiative\n\n
+   description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division. \n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Contract Award - Duna Investigation Initiative\n\nThe Science Council has reviewed all submitted proposals for the Duna investigation mission and is pleased to inform you that Lowne Aerospace has been selected as the primary contractor.\n\nYour company's innovative approach to deep space operations and proven track record in complex mission execution make you the ideal partner for this scientific endeavor. The initiative has been assigned the codename "RED FRONTIER" and classified as a Priority Alpha mission.\n\nInitial analysis suggests this investigation could significantly advance our understanding of planetary formation and potentially support future exploration efforts beyond the Kerbin system.
 
     synopsis = Current Operation: Red Frontier - Establishing presence in the Duna system.
 
@@ -15,6 +16,9 @@ CONTRACT_TYPE
     group = RedFrontier
     
     // Contract parameters
+    minExpiry = 760 
+    maxExpiry = 760 
+    deadline = 8760 
     cancellable = false
     declinable = true
     autoAccept = true
@@ -23,6 +27,13 @@ CONTRACT_TYPE
     maxCompletions = 1
     maxSimultaneous = 1
     
+	REQUIREMENT
+	{
+ 	   name = CompleteContract
+ 	   type = CompleteContract
+ 	   contractType = RF0_2_Signals
+	}
+
     // Track completion of missions
     DATA
     {
