--- a/Contracts/RF1_1_ABlipInTheDark.cfg
+++ b/Contracts/RF1_1_ABlipInTheDark.cfg
@@ -22,13 +22,14 @@ notes = Analysis of mission parameters has identified the following technical re
     group = RedFrontier
     
     // Contract requirements
-    minExpiry = 10000
-    maxExpiry = 10000
-    deadline = 2000
+    minExpiry = 2190
+    maxExpiry = 2190
+    deadline = 2190
     cancellable = true
     declinable = true
     autoAccept = false
     prestige = Significant
+    maxCompletions = 1
 
 	REQUIREMENT
 	{
@@ -116,7 +117,7 @@ notes = Analysis of mission parameters has identified the following technical re
                 name = HasRelaySatellite
                 type = PartValidation
                 partModule = ModuleDataTransmitter
-                minCount = 1
+                minCount = 3
             }
             
             PARAMETER
