--- a/Contracts/RF1_2_SignalConfirmed.cfg
+++ b/Contracts/RF1_2_SignalConfirmed.cfg
@@ -16,9 +16,9 @@ CONTRACT_TYPE
     group = RedFrontier
     
     // Contract requirements
-    minExpiry = 0
-    maxExpiry = 0
-    deadline = 0
+    minExpiry = 2190
+    maxExpiry = 2190
+    deadline = 2190
     cancellable = true
     declinable = true
     autoAccept = false
@@ -91,7 +91,7 @@ CONTRACT_TYPE
         title = Return Sample to Orbit
         notes = Create a sample return capability to deliver collected materials to the orbital science station. Implement secure containment systems and establish docking capability with the existing station.
         
-        define = Duna Sample Return Vehicle
+        define = Duna SRV
         
         PARAMETER
         {
@@ -114,8 +114,8 @@ CONTRACT_TYPE
         {
             name = DockWithStation
             type = Docking
-            vessel = Duna Science Station
-            defineDockedVessel = Sample Return Completed
+            vessel = Science Station
+
         }
     }
     
