--- a/RedFrontier.cfg
+++ b/RedFrontier.cfg
@@ -7,7 +7,7 @@ CONTRACT_GROUP
     
     // Group details
     agent = Lowne Aerospace
-    maxSimultaneous = 2
+    maxSimultaneous = 5
 }
 
 // Main campaign information contract
@@ -37,8 +37,8 @@ CONTRACT_TYPE
     minExpiry = 0
     maxExpiry = 0
     maxCompletions = 1
-    maxSimultaneous = 2
-    autoAccept = True
+    maxSimultaneous = 0
+    autoAccept = false
     
     // Basic rewards - adjust as needed
     advanceFunds = 10000
@@ -59,7 +59,7 @@ CONTRACT_TYPE
 	  {
 	     name = CompleteContract
 	     type = CompleteContract
-	     contractType = RF1_1_ABlipInTheDark
+	     contractType = RF1_1d_IkeResourceOps
 	   }
         }
 
